--- a/Mandel.bib
+++ b/Mandel.bib
@@ -25421,6 +25421,23 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Rastello:2021,
+       author = {{Rastello}, Sara and {Mapelli}, Michela and {Di Carlo}, Ugo N. and {Iorio}, Giuliano and {Ballone}, Alessandro and {Giacobbo}, Nicola and {Santoliquido}, Filippo and {Torniamenti}, Stefano},
+        title = "{Dynamics of binary black holes in low-mass young star clusters}",
+      journal = {\mnras},
+     keywords = {black hole physics, gravitational waves, stars: kinematics and dynamics, Galaxy: open clusters and associations: general, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = nov,
+       volume = {507},
+       number = {3},
+        pages = {3612-3625},
+          doi = {10.1093/mnras/stab2355},
+archivePrefix = {arXiv},
+       eprint = {2105.01669},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.507.3612R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 @ARTICLE{Ge:2010,
        author = {{Ge}, Hongwei and {Hjellming}, Michael S. and {Webbink}, Ronald F. and {Chen}, Xuefei and {Han}, Zhanwen},
         title = "{Adiabatic Mass Loss in Binary Stars. I. Computational Method}",
@@ -31028,3 +31045,36 @@ archivePrefix = {arXiv},
         year = 2021, 
 	note = {https://academic.oup.com/mnras/advance-article-abstract/doi/10.1093/mnras/stab3159/6424300}
 }
+
+@ARTICLE{Trani:2021,
+       author = {{Trani}, Alessandro Alberto and {Rastello}, Sara and {Di Carlo}, Ugo N. and {Santoliquido}, Filippo and {Tanikawa}, Ataru and {Mapelli}, Michela},
+        title = "{Compact Object Mergers in Hierarchical Triples from Low-Mass Young Star Clusters}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = nov,
+archivePrefix = {arXiv},
+       eprint = {2111.06388},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211106388T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Tokovinin:2021,
+       author = {{Tokovinin}, Andrei},
+        title = "{Architecture of Hierarchical Stellar Systems and Their Formation}",
+      journal = {Universe},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2021,
+        month = sep,
+       volume = {7},
+       number = {9},
+        pages = {352},
+          doi = {10.3390/universe7090352},
+archivePrefix = {arXiv},
+       eprint = {2109.09118},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021Univ....7..352T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
