--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -301,7 +301,7 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 \item[c--f.] Then, at the end of the main sequence, the star behaves essentially as a Wolf-Rayet naked helium star, contracting rather than expanding. As long as the metallicity is sufficiently low that the wind-driven mass loss does not significantly widen the binary -- which would lead to the loss of co-rotation and chemically homogeneous evolution \citep{deMink:2009} -- the binary can avoid mass transfer.  
 \end{itemize}
 
-\citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive observed gravitational-wave sources (such as GW150914), though not the lowest-mass systems (see also \cite{duBoisson:2020,Riley:2020}).  This scenario does, however, require some unproven assumptions regarding stellar evolution, with uncertain observational supporting evidence \citep{Almeida:2015, AbdulMasih:2021}.
+\citet{MandeldeMink:2016,deMinkMandel:2016}, and \citet{Marchant:2016} explored such binaries and concluded that they could present a viable channel for forming the most massive observed gravitational-wave sources (such as GW150914), though not the lowest-mass systems (see also \cite{duBoisson:2020,Riley:2020}).  This scenario does, however, require some unproven assumptions regarding stellar evolution, with uncertain or even contradictory observational supporting evidence \citep{Almeida:2015, AbdulMasih:2021}.
 
 \textbf{Population III stars:} A somewhat similar evolutionary channel to chemically homogeneous evolution --- one in which stars in a close binary avoid significant radial expansion --- could play out for the first generation of metal-free stars in the early Universe, known as population III stars.  The absence of primordial carbon, nitrogen and oxygen in these stars could prevent the CNO cycle hydrogen fusion in the hydrogen shell around the helium-rich core, reducing radial expansion after the end of the main sequence \citep{Marigo:2001}.  In addition to removing the need for subsequent mass transfer as in the chemically homogeneous evolution channel, this could allow the star to retain its tightly bound hydrogen envelope when collapsing into a black hole \citep{Kinugawa:2021}.  Population III stars would also experience reduced mass loss through winds due to their zero metallicity.   Meanwhile, the initial mass function of zero-metallicity stars could itself favour higher masses.  All of these effects make population III stars promising progenitors for the formation of merging binary black holes \citep{Belczynski:2004popIII,Kinugawa:2014,Inayoshi:2017}.  However, there are significant uncertainties in the initial properties of population III binaries and the amount of stellar expansion that population III stars will experience \citep{Hirano:2014,Stacy:2016,Hartwig:2016,Belczynski:2017popIII}.
 
@@ -315,7 +315,7 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 	\caption{\label{fig:dynamical} A sketch of merging black-hole binary formation via the dynamical evolution channel.  The steps are described in section \ref{form:dyn}.}
 \end{figure}
 
-The merging black holes may not have formed in the same binary at all.  Instead, in this channel, they formed from the collapse of independent massive stars (perhaps single, or each in its own separate binary), but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
+The merging black holes may not have formed in the same binary at all.  Instead, in this channel, they are remnants of independent massive stars (perhaps single, or each in its own separate binary), but are then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
 \begin{enumerate}
 \item[a.] Suppose the two black holes formed in a dense stellar environment such as a globular cluster.  
 \item[b.] As the most massive objects in the cluster, the black holes naturally sink toward the cluster centre as energy is equipartitioned throughout the cluster in the process known as mass segregation \citep{Spitzer:1969,BinneyTremaine}, but see \citep{Trenti:2013}.  Once there, they may form binaries through three-body interactions, or by substituting into existing binaries: in a $2+1$ interaction, the lightest object is usually ejected in favour of the two heavier objects forming a binary.  
@@ -323,32 +323,35 @@ The merging black holes may not have formed in the same binary at all.  Instead,
 \item[e.] If the density of objects is high enough to ensure a suitable rate of interactions, the binary will be hardened until it is compact enough to merge through gravitational-wave emission, provided it does not get kicked out of the cluster through a recoil kick from the last interaction -- and even then, it may still go on to merge outside of the cluster.  
 \end{enumerate}
 
-The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Mapelli:2016,Rodriguez:2016,Park:2017,FragioneKocsis:2018} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation, in part because the high escape velocity makes merger products more likely to be retained.  \citet{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020} described the role that an accretion disk in an active galactic nucleus could play in enhancing the rate of binary black hole mergers.
+The prospects for these dynamically formed merging binary black holes in globular clusters and young massive stellar clusters have been explored through a series of analytical estimates and numerical experiments by \cite{Sigurdsson:1993,Kulkarni:1993,PZwart:2000,OLeary:2006,Banerjee:2010,Downing:2011,Morscher:2015,Rodriguez:2016,Park:2017,FragioneKocsis:2018,Mapelli:2020} and others.  \citet{OLeary:2008} \citep[but see][]{Tsang:2013} and \citet{AntoniniPerets:2012} explored dynamical formation in galactic nuclei with a massive black hole, while \citet{MillerLauburg:2008} and \citet{AntoniniRasio:2016} argued that galactic nuclei without a massive black hole are a favoured site for dynamical formation.  
+
+An accretion disk in an active galactic nucleus can act as a catalyst for binary black hole mergers \citep{Bellovary:2016, Bartos:2016, Stone:2016, McKernan:2018, Tagawa:2020}.   Compact objects in active galactic nuclei may form directly in the disk, be captured by the disk through gas drag, or settle into a disk through resonant relaxation against the stellar background \citep{SzolgyenKocsis:2018}.  Once in the disk, black holes can be transported radially until, perhaps, being captured into migration traps, where high black-hole concentrations increase interaction rates \citep{Bellovary:2016,Yang:2019,Secunda:2019,PengChen:2021}.  Once binaries form they can be hardened by a combination of dynamical interactions and gas accretion.  As with other mergers in galactic nuclei, the high escape velocity makes it more likely that merger products will be retained despite gravitational-wave recoil kicks, enabling hierarchical mergers \citep{Yang:2019,Secunda:2020,Tagawa:2021}.  While active galactic nuclei are promising environments for black-hole binary formation, some of the many uncertainties include star formation in disks, the efficiency of migration traps \citep{PanYang:2021}, the details of gas interaction with black holes and binaries, and feedback from accretion \citep{Tagawa:2020}.
+
 
 \subsubsection{A team effort: combining multiple interactions}
 
 Of course, the channels outlined above need not be distinct, and the same binary may have benefited from multiple types of interaction while en route to coalescence.   New studies are now attempting to consistently combine stellar and binary evolution and dynamics at comparable levels of fidelity \citep[e.g.,][]{Santoliquido:2020}.  Black holes brought together by dynamical interaction in stellar clusters may be part of mass-transferring binaries earlier in their evolutionary histories.  Mass-transferring binaries that are too wide at the end of binary evolution to merge in the age of the Universe may be helped along by subsequent dynamical encounters \citep[e.g.,][]{Belczynski:2014VMS}.  The more massive star in an isolated binary may evolve chemically homogeneously, while its less massive companion expands and donates mass \citep{Marchant:2017}.  
 
-Hierarchical triple systems, with a tight inner binary and a third companion on a wider outer orbit are a particularly promising combination of the isolated evolution and dynamical formation channels.  A significant fraction of massive stars appear to be born in triples and higher multiplicity systems \citep{DucheneKraus:2013}.  Triples may also be formed dynamically through binary--binary scatterings \citep{MillerHamilton:2002b}.  Massive black holes in galactic nuclei --- or intermediate-mass black holes in globular clusters --- may also act as effective triple companions.   
+Hierarchical triple systems, with a tight inner binary and a third companion on a wider outer orbit, are a particularly promising combination of the isolated evolution and dynamical formation channels.  A significant fraction of massive stars appear to be born in triples and higher multiplicity systems \citep{DucheneKraus:2013, Tokovinin:2021}.  Triples may also be formed dynamically through binary--binary scatterings \citep{MillerHamilton:2002b, Trani:2021}.  Massive black holes in galactic nuclei --- or intermediate-mass black holes in globular clusters --- may also act as effective triple companions.   
 
-When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} and \citet{Martinez:2020} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-centre massive black hole as the outer companion.
+When the outer binary's orbit is sufficiently wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} and \citet{Martinez:2020} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-centre massive black hole as the outer companion.
 
 
 \section{Expected properties of merging systems}\label{merge}
 
 In this section we describe the expected hallmarks of each formation scenario in the properties of observed binary black hole mergers. These properties include merger rates, black-hole masses, mass ratios, spins, orbital eccentricities, and formation environments.
 
-Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational-wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the following section for a discussion of the current state of these efforts. In the meantime, our understanding of the expected merger rates and properties of binary black holes rests largely on theoretical modelling. 
+Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational-wave detections grows, so does our ability to infer merger rates and typical system properties from observed data; see the following section for a discussion of the current state of these efforts. In the meantime, our understanding of the expected merger rates and properties of binary black holes rests largely on theoretical modelling. 
 
-For the isolated binary evolution channel (section \ref{form:isol}), this modelling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up merging as binary black holes. Population synthesis techniques can be applied either to initial binaries at formation, or to specific observed systems at intermediate evolutionary stages, such as Cygnus X-1 \citep{Bulik:2008,Neijssel:2020CygX1} and Cygnus X-3 \citep{CygnusX3:2012}.  
+For the isolated binary evolution channel (section \ref{form:isol}), this modelling typically uses a population synthesis approach, i.e., forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up merging as binary black holes. Population synthesis techniques can be applied either to initial binaries at formation, or to specific observed systems at intermediate evolutionary stages, such as Cygnus X-1 \citep{Bulik:2008,Neijssel:2020CygX1} and Cygnus X-3 \citep{CygnusX3:2012}.  
 
 Models of the dynamical formation channel are typically based on either (i) computationally expensive N-body cluster models with direct integration of the equations of motion for each object, or (ii) a less computationally costly Monte Carlo approach in which the evolution of the distribution of the cluster components in phase space is coupled with stochastically sampled strong 3-body and 4-body interactions modelled with few-body dynamics, or (iii) semi-analytical prescriptions that attempt to emulate these methods at a fraction of the computational cost. 
 
 \subsection{Merger rates}
 
-Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  The merger rate predictions and observed rates are summarised by \cite{MandelBroekgaarden:2021} (see \cite{ratesdoc} for a historical summary from a decade earlier).  Broadly, predictions for isolated binary evolution, including contributions from chemically homogeneous evolution and population III stars, are consistent with or exceed the observed rate of binary black hole mergers of $[16,130]$ Gpc$^{-3}$ yr$^{-1}$ \citep{GWTC3:pop}, while predicted dynamical formation rates (including contributions from globular, nuclear, and young stellar clusters, as well as hierarchical triples) tend toward the lower end of the observed merger rate.
+Here we outline high-level estimates of merger rates for three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  The merger rate predictions and observed rates are summarised by \cite{MandelBroekgaarden:2021} (see \cite{ratesdoc} for a historical summary from a decade earlier).  Broadly, predictions for isolated binary evolution, including contributions from chemically homogeneous evolution and population III stars, are consistent with or exceed the observed rate of binary black hole mergers of $[16,130]$ Gpc$^{-3}$ yr$^{-1}$ \citep{GWTC3:pop}, while predicted dynamical formation rates (including contributions from globular, nuclear, and young stellar clusters, as well as hierarchical triples) tend toward the lower end of the observed merger rate.
 
-\subsubsection{Binary evolution via a common envelope}\label{sec:CErates}
+\subsubsection{Binary evolution via the common-envelope phase}\label{sec:CErates}
 
 In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right component masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that an isolated stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.   In reality, of course, the probabilities for each key stage are coupled in a rather complex manner.
 
@@ -357,12 +360,11 @@ In order to survive an evolutionary pathway such as the one depicted in \autoref
 
 \item[(ii)] Initial binary  separations are observed to be distributed uniformly in the logarithm, $p(a) \propto 1/a$ \citep{Opik:1924}.  The first episode of mass transfer from the donor should typically be ``case B'' mass transfer (i.e., the donor should evolve beyond core hydrogen burning, but not yet beyond core helium burning).  Stars expand by several orders of magnitude during this phase, which means that the range of initial separations occupies a significant logarithmic fraction of the total initial range of separations, so $f_\textrm{init sep} \approx 0.5$.  
 
-\item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass, so that supernovae do not significantly affect binary parameters, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
+\item[(iii)]  We assume that black holes receive low natal kicks and do not lose significant amounts of mass during stellar collapse, so supernovae do not significantly affect binary survival or binary properties, i.e. $f_\textrm{survive SN1} \approx f_\textrm{survive SN2} \approx 1$.  
 
-\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase.  Even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase \citep[e.g.,][]{Claeys:2014}.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$.  
+\item[(iv)] The fraction of binaries that initiate and survive the common envelope phase during mass transfer from the secondary to the primary is perhaps the least certain.  Typically, dynamically unstable mass transfer is more likely for greater mass ratios of the donor to the accretor.  The accreting black hole in this case may only have a third of the initial mass of the primary, with the rest lost with the envelope and through winds, while the secondary donor may have increased its mass during the first mass transfer phase.  Even so, unless the secondary was initially close to the primary in mass, the mass ratio is unlikely to exceed $3:1$, which may be close to the threshold for initiating a common envelope phase \citep[e.g.,][]{Claeys:2014}.  The evolutionary state of the donor during the onset of mass transfer also plays an important role, setting both the amount by which the donor shrinks in response to mass loss and the envelope binding energy.  Together, these constraints reduce the fraction of successful common envelope initiations and ejections to $f_\textrm{CE} \approx 0.1$, though this fraction depends on a range of factors including metallicity, which impacts the envelope binding energy.   
 
-\item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$.
-\end{enumerate}
+\item[(v)]  Finally, there is the question of final separation at second black hole formation, as only systems with separations smaller than those in \autoref{fig:periapsis} will merge in the age of the Universe.  The final separation after the common envelope ejection is set by the binding energy of the envelope at the time when the secondary initiates unstable mass transfer, which in turn depends on the binary separation at that time.  Therefore, very crudely, the flat-in-the-log distribution of initial binary separations persists to the final binary separation.  Since the delay time between formation and merger $\tau_\textrm{GW} \propto a^4$ is a power law in the separation, the delay time distribution also follows a flat-in-the-log distribution $p(\tau) \propto 1/\tau$.  Among the binaries that survive a common envelope the closest will be those whose separations just barely encompass a Wolf-Rayet star, i.e., with separations of a few solar radii (and merger times of a few million years).  The logarithmic distribution ensures that tens of percent of binaries that survive a common envelope will merge in the age of the Universe, $f_\textrm{merge} \approx 0.2$; this fraction is again metallicity-dependent because binaries widen more through greater wind mass loss at larger metallicities \citep{Neijssel:2019}. \end{enumerate}
 
 Thus, our Drake-like equation is as follows:
 \begin{eqnarray}
@@ -381,7 +383,7 @@ f_\textrm{BBH} &=& f_\textrm{primary} \times f_\textrm{secondary} \times f_\text
  & \sim & 0.0002 \times 0.5 \times 0.1 \times 0.1 \times 1 = 10^{-6}.
 \end{eqnarray}
 
-Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the previous paragraph because only the most massive stars with initial masses above $\sim 50 M_\odot$ are likely to have the necessary level of mixing to undergo chemically homogeneous evolution; and $f_\textrm{secondary} \approx 0.5$ as above.  In order to engage in efficient mixing, the components must be close enough to be tidally locked and rotating at a significant fraction of the break-up velocity, yet avoid merger; this defines a range of initial separations spanning roughly a factor of 2 out of a total range spanning $\approx 5$ orders of magnitude, so $f_\textrm{init sep} \approx 0.1$ assuming a flat-in-the-logarithm distribution of initial separations.  Finally, $f_Z \approx 0.1$ is the total historical fraction of low-metallicity star formation, required to suppress line-driven winds which widen the binary, spin down the stars, and suppress mixing.  Because these binaries are constructed to be very tight at birth, the vast majority should merge after the stars collapse into black holes in situ, and $f_\textrm{merge} \approx 1$. Thus, if this channel is viable, the rate of binary black hole mergers produced through the chemically homogeneous evolution channel could reach perhaps $\sim 10$ Gpc$^{-3}$ yr$^{-1}$, but with a preference for much higher masses than classical isolated binary evolution.
+Here, $f_\textrm{primary} \approx 2 \times 10^{-4}$, lower than the value in the previous paragraph because only the most massive stars with initial masses above $\sim 50 M_\odot$ are likely to have the necessary level of mixing to undergo chemically homogeneous evolution; and $f_\textrm{secondary} \approx 0.5$ as above.  In order to engage in efficient mixing, the components must be close enough to be tidally locked and rotating at a significant fraction of the break-up velocity, yet avoid merger; this defines a range of initial separations spanning roughly a factor of 2 out of a total range spanning $\approx 5$ orders of magnitude, so $f_\textrm{init sep} \approx 0.1$ assuming a flat-in-the-logarithm distribution of initial separations.  Finally, $f_Z \approx 0.1$ is the total historical fraction of low-metallicity star formation, required to suppress line-driven winds which widen the binary, spin down the stars, and stop mixing.  Because these binaries are constructed to be very tight at birth, the vast majority should merge after the stars collapse into black holes in situ, and $f_\textrm{merge} \approx 1$. Thus, if this channel is viable, the rate of binary black hole mergers produced through the chemically homogeneous evolution channel could reach perhaps $\sim 10$ Gpc$^{-3}$ yr$^{-1}$, but with a preference for much higher masses than classical isolated binary evolution.
 
 
 \subsubsection{Dynamical formation}
